--- a/package.json
+++ b/package.json
@@ -21,15 +21,26 @@
       "packages/core"
     ]
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "files": [],
   "devDependencies": {
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
-    "eslint": "^8.53.0",
-    "eslint-config-preact": "^1.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-preact": "^0.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
+    "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "preact": "^10.19.2"
   }
 }
