--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "@vaply/common",
   "private": true,
   "version": "0.0.1",
-  "description": "Content Anotation PLaYer - root project",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "Content Annotation PLaYer - root project",
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hkasabas/vaply.git"
@@ -18,7 +16,7 @@
   "homepage": "https://github.com/hkasabas/vaply#readme",
   "workspaces": {
     "packages": [
-      "packages/core"
+      "packages/player"
     ]
   },
   "engines": {
@@ -26,16 +24,12 @@
   },
   "files": [],
   "devDependencies": {
-    "@types/jest": "^29.5.8",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-preact": "^0.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
     "tslib": "^2.6.2",
