--- a/packages/player/tsconfig.build.json
+++ b/packages/player/tsconfig.build.json
@@ -5,5 +5,6 @@
     "rootDir": "src",
     "tsBuildInfoFile": "dist/.tsbuildinfo"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
 }
