--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "ES2015",
+    "module": "ESNext",
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowJs": true,
