--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "files": [],
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-preact": "^0.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
     "tslib": "^2.6.2",
