automatically import preact's JSX factory (h)

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,8 +8,8 @@
     "target": "es6",
     "noImplicitAny": true,
     "moduleResolution": "node",
-    "jsx": "react",
-    "jsxFactory": "h",
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "declaration": true,
     "incremental": true,
     "declarationMap": true,
