--- a/.github/workflows/player-test.yaml
+++ b/.github/workflows/player-test.yaml
@@ -17,10 +17,10 @@ defaults:
   working-directory: ./packages/player
 
 jobs:
-  # prepare env
   run:
     runs-on: ubuntu-latest
     steps:
+      # prepare env
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install pnpm
@@ -33,7 +33,8 @@ jobs:
           node-version: "18"
           cache: pnpm
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
+      # run tasks
       - name: Build
         run: pnpm run build
       - name: Test
